--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.4"
   }
 }
